--- a/features/input-button.yml
+++ b/features/input-button.yml
@@ -1,5 +1,5 @@
 name: '<input type="button">'
-description: The `<input type="button">` HTML element represents a button that triggers some action, such as submitting a form or opening a dialog, styled as a labeled rectangular box by default. Not to be confused with the `<button>` elment, which contains HTML content.
+description: The `<input type="button">` HTML element represents a button that triggers some action, such as submitting a form or opening a dialog, styled as a labeled rectangular box by default. Not to be confused with the `<button>` element, which contains HTML content.
 spec: https://html.spec.whatwg.org/multipage/input.html#button-state-(type=button)
 group:
   - forms
