--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "test:types": "npm run --workspaces test:types && tsc",
     "test": "npm run test:caniuse -- --quiet && npm run test:schema && npm run test:specs && npm run test:types && npm run test:format && npm run test:dist && npm run test --workspaces && npm run test:lint",
     "update-drafts": "tsx scripts/update-drafts.ts",
-    "migrate-to-bcd": "tsx scripts/migrate-to-bcd.ts"
+    "migrate-to-bcd": "tsx scripts/migrate-to-bcd.ts",
+    "refresh-downstream": "tsx scripts/refresh-downstream.ts"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
