--- a/features/gpc.yml
+++ b/features/gpc.yml
@@ -1,4 +1,4 @@
-name: Global Privacy Control
+name: Global privacy control
 description: The `Sec-GPC` request header indicates whether the user consents to a website or service selling or sharing their personal information with third parties.
 spec: https://w3c.github.io/gpc/
 compat_features:
