--- a/features/transforms3d.yml.dist
+++ b/features/transforms3d.yml.dist
@@ -71,3 +71,16 @@ compat_features:
   #   safari: "15.4"
   #   safari_ios: "15.4"
   - css.properties.backface-visibility
+
+  # baseline: high
+  # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
+  # support:
+  #   chrome: "97"
+  #   chrome_android: "97"
+  #   edge: "97"
+  #   firefox: "93"
+  #   firefox_android: "93"
+  #   safari: "15.4"
+  #   safari_ios: "15.4"
+  - css.types.transform-function.perspective.none
