--- a/features/draft/spec/html.yml.dist
+++ b/features/draft/spec/html.yml.dist
@@ -679,6 +679,7 @@ compat_features:
   #   safari: "8"
   #   safari_ios: "8"
   - api.HTMLImageElement.srcset
+  - html.elements.img.srcset
 
   # baseline: high
   # baseline_low_date: 2015-09-22
@@ -710,6 +711,20 @@ compat_features:
   - api.HTMLMeterElement.min
   - api.HTMLMeterElement.optimum
   - api.HTMLMeterElement.value
+
+  # baseline: high
+  # baseline_low_date: 2016-03-21
+  # baseline_high_date: 2018-09-21
+  # support:
+  #   chrome: "34"
+  #   chrome_android: "34"
+  #   edge: "13"
+  #   firefox: "38"
+  #   firefox_android: "38"
+  #   safari: "9.1"
+  #   safari_ios: "9.3"
+  - html.elements.source.sizes
+  - html.elements.source.srcset
 
   # baseline: high
   # baseline_low_date: 2016-03-21
@@ -1079,33 +1094,6 @@ compat_features:
   #   safari: "11"
   #   safari_ios: "11"
   - api.origin
-
-  # baseline: high
-  # baseline_low_date: ≤2018-10-02
-  # baseline_high_date: ≤2021-04-02
-  # support:
-  #   chrome: "34"
-  #   chrome_android: "34"
-  #   edge: ≤18
-  #   firefox: "38"
-  #   firefox_android: "38"
-  #   safari: "8"
-  #   safari_ios: "8"
-  - html.elements.img.srcset
-
-  # baseline: high
-  # baseline_low_date: ≤2018-10-02
-  # baseline_high_date: ≤2021-04-02
-  # support:
-  #   chrome: "34"
-  #   chrome_android: "34"
-  #   edge: ≤18
-  #   firefox: "38"
-  #   firefox_android: "38"
-  #   safari: "9.1"
-  #   safari_ios: "9.3"
-  - html.elements.source.sizes
-  - html.elements.source.srcset
 
   # baseline: high
   # baseline_low_date: 2019-03-25
