--- a/features/websockets.yml
+++ b/features/websockets.yml
@@ -31,3 +31,8 @@ compat_features:
   - api.WebSocketError.WebSocketError
   - api.WebSocketError.closeCode
   - api.WebSocketError.reason
+  - http.headers.Sec-WebSocket-Accept
+  - http.headers.Sec-WebSocket-Extensions
+  - http.headers.Sec-WebSocket-Key
+  - http.headers.Sec-WebSocket-Protocol
+  - http.headers.Sec-WebSocket-Version
