--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 coverage/
 node_modules/
 packages/baseline-browser-mapping/package-lock.json
+packages/baseline-browser-mapping/dist/
 packages/compute-baseline/dist/
 packages/web-features/index.d.ts
 packages/**/LICENSE.txt
