--- a/packages/baseline-browser-mapping/package.json
+++ b/packages/baseline-browser-mapping/package.json
@@ -1,11 +1,20 @@
 {
   "name": "baseline-browser-mapping",
-  "version": "0.1.1",
+  "version": "0.2.1",
   "description": "A library for obtaining browser versions with their maximum supported Baseline feature set and Widely Available status.",
-  "main": "index.js",
+  "exports": {
+    ".": "./dist/index.js"
+  },
+  "files": [
+    "dist",
+    "LICENSE.txt",
+    "README.md"
+  ],
+  "types": "./dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "prettier . --write; tsc"
   },
   "license": "Apache-2.0",
   "dependencies": {
