--- a/.github/workflows/refresh_downstream.yml
+++ b/.github/workflows/refresh_downstream.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Run refresh-downstream script
         run: |
-          npm i
+          npm ci
           npm run refresh-downstream ${{secrets.USERAGENTSIOKEY}}
 
       - name: Prepare for push and publish
