--- a/features/destructuring.yml
+++ b/features/destructuring.yml
@@ -1,5 +1,5 @@
 name: Destructuring
-description: The destructuring assignment syntax is a JavaScript expression that makes it possible to unpack values from arrays, or properties from objects, into distinct variables.
+description: The destructuring assignment syntax is a JavaScript expression that unpacks values from arrays, or properties from objects, into distinct variables.
 spec:
   - https://tc39.es/ecma262/multipage/ecmascript-language-expressions.html#sec-destructuring-assignment
   - https://tc39.es/ecma262/multipage/ecmascript-language-statements-and-declarations.html#sec-destructuring-binding-patterns
