--- a/features/meta-theme-color.yml
+++ b/features/meta-theme-color.yml
@@ -1,5 +1,5 @@
 name: '<meta name="theme-color">'
-description: 'The "theme-color" `<meta>` name allows you to customize the display of the page or the surrounding browser user interface.'
+description: 'The "theme-color" `<meta>` name sets the preferred color to customize the display of the page or the surrounding browser user interface.'
 spec: https://html.spec.whatwg.org/multipage/semantics.html#meta-theme-color
 group: html
 caniuse: meta-theme-color
