--- a/features/webxr-dom-overlays.yml
+++ b/features/webxr-dom-overlays.yml
@@ -5,3 +5,4 @@ group: webxr
 compat_features:
   - api.Element.beforexrselect_event
   - api.XRSession.domOverlayState
+  - css.selectors.xr-overlay
