--- a/features/xhr.yml
+++ b/features/xhr.yml
@@ -32,6 +32,7 @@ compat_features:
   - api.XMLHttpRequest.XMLHttpRequest
   - api.XMLHttpRequest.abort
   - api.XMLHttpRequest.abort_event
+  - api.XMLHttpRequest.authorization_removed_cross_origin
   - api.XMLHttpRequest.error_event
   - api.XMLHttpRequest.getAllResponseHeaders
   - api.XMLHttpRequest.getAllResponseHeaders.header_names_lowercase
