--- a/features/resize-observer.yml
+++ b/features/resize-observer.yml
@@ -1,7 +1,8 @@
-draft_date: 2024-10-21
 name: Resize Observer
 description: TODO
 spec: https://drafts.csswg.org/resize-observer-1/
+status:
+  compute_from: api.ResizeObserver
 compat_features:
   - api.ResizeObserver
   - api.ResizeObserver.ResizeObserver
