Add more device motion/orientation keys

--- a/features/device-orientation-events.yml
+++ b/features/device-orientation-events.yml
@@ -4,3 +4,31 @@ description: The `DeviceMotion` and `DeviceOrientation` events report the moveme
 spec: https://w3c.github.io/deviceorientation/
 caniuse: deviceorientation
 group: sensors
+status:
+  compute_from: api.DeviceMotionEvent
+compat_features:
+  - api.DeviceMotionEvent
+  - api.DeviceMotionEvent.DeviceMotionEvent
+  - api.DeviceMotionEvent.acceleration
+  - api.DeviceMotionEvent.accelerationIncludingGravity
+  - api.DeviceMotionEvent.interval
+  - api.DeviceMotionEvent.requestPermission_static
+  - api.DeviceMotionEvent.rotationRate
+  - api.DeviceMotionEventAcceleration
+  - api.DeviceMotionEventAcceleration.x
+  - api.DeviceMotionEventAcceleration.y
+  - api.DeviceMotionEventAcceleration.z
+  - api.DeviceMotionEventRotationRate
+  - api.DeviceMotionEventRotationRate.alpha
+  - api.DeviceMotionEventRotationRate.beta
+  - api.DeviceMotionEventRotationRate.gamma
+  - api.DeviceOrientationEvent
+  - api.DeviceOrientationEvent.DeviceOrientationEvent
+  - api.DeviceOrientationEvent.absolute
+  - api.DeviceOrientationEvent.alpha
+  - api.DeviceOrientationEvent.beta
+  - api.DeviceOrientationEvent.gamma
+  - api.DeviceOrientationEvent.requestPermission_static
+  - api.Window.devicemotion_event
+  - api.Window.deviceorientation_event
+  - api.Window.deviceorientationabsolute_event
