--- a/features/text-encoding.yml
+++ b/features/text-encoding.yml
@@ -1,5 +1,5 @@
 name: Text encoding and decoding
-description: " The `TextEncoder` API generates a byte stream with UTF-8 encoding from a stream of code points, and `TextDecoder` does the reverse."
+description: "The `TextEncoder` API transforms a stream of code points into a byte stream with UTF-8 encoding, and `TextDecoder` does the reverse."
 spec: https://encoding.spec.whatwg.org/
 caniuse: textencoder
 # Status generated to match Caniuse.
