--- a/features/localstorage.yml
+++ b/features/localstorage.yml
@@ -15,6 +15,7 @@ compat_features:
   - api.Storage.removeItem
   - api.Storage.setItem
   - api.StorageEvent
+  - api.StorageEvent.StorageEvent
   - api.StorageEvent.key
   - api.StorageEvent.newValue
   - api.StorageEvent.oldValue
