--- a/features/screen.yml
+++ b/features/screen.yml
@@ -1,5 +1,5 @@
 name: Screen
-description: The `Window.screen` property contains information about the screen of the output device that the referenced `window` is being rendered on.
+description: The `window.screen` property contains information about the screen of the output device that the referenced `window` is being rendered on.
 spec: https://drafts.csswg.org/cssom-view-1/#screen
 compat_features:
   - api.Screen
