--- a/features/devicepixelratio.yml
+++ b/features/devicepixelratio.yml
@@ -1,4 +1,4 @@
-name: devicepixelratio
+name: devicePixelRatio
 description: The `Window.devicePixelRatio` read-only property returns the ratio of the vertical size of one physical pixel on the current display device to the size of one CSS pixel.
 spec: https://drafts.csswg.org/cssom-view-1/#dom-window-devicepixelratio
 caniuse: devicepixelratio
