--- a/.github/workflows/refresh_downstream.yml
+++ b/.github/workflows/refresh_downstream.yml
@@ -47,7 +47,7 @@ jobs:
           fi
 
   publish:
-    if: github.repository == 'web-platform-dx/web-features'
+    if: ${{ (github.repository == 'web-platform-dx/web-features') ||  (github.repository == 'tonypconway/web-features') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
