--- a/features/description-list.yml
+++ b/features/description-list.yml
@@ -1,5 +1,5 @@
 name: Description list
-description: The `<dl>`, `<dt>`, and '<dd>' HTML elements represent a list of terms and their associated descriptions. Use a description list to create glossaries or similar list of key-value pairs.
+description: The `<dl>`, `<dt>`, and `<dd>` HTML elements represent a list of terms and their associated descriptions. Use a description list to create glossaries or similar list of key-value pairs.
 spec:
   - https://html.spec.whatwg.org/multipage/grouping-content.html#the-dd-element
   - https://html.spec.whatwg.org/multipage/grouping-content.html#the-dl-element
