--- a/features/css-object-model.yml.dist
+++ b/features/css-object-model.yml.dist
@@ -263,6 +263,7 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: "131"
+  #   edge: "131"
   - api.CSSMarginRule
   - api.CSSMarginRule.name
   - api.CSSMarginRule.style
