--- a/features/font-variant-emoji.yml.dist
+++ b/features/font-variant-emoji.yml.dist
@@ -5,6 +5,7 @@ status:
   baseline: false
   support:
     chrome: "131"
+    edge: "131"
 compat_features:
   # baseline: false
   # support:
@@ -17,6 +18,7 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: "131"
+  #   edge: "131"
   - css.properties.font-variant-emoji.emoji
   - css.properties.font-variant-emoji.normal
   - css.properties.font-variant-emoji.text
