--- a/features/anchor-positioning.yml.dist
+++ b/features/anchor-positioning.yml.dist
@@ -192,6 +192,7 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: "131"
+  #   edge: "131"
   - css.properties.anchor-scope
   - css.properties.anchor-scope.all
   - css.properties.anchor-scope.none
