--- a/features/canvas-2d.yml.dist
+++ b/features/canvas-2d.yml.dist
@@ -357,8 +357,9 @@ compat_features:
   #   safari_ios: "15"
   - api.CanvasRenderingContext2D.drawImage.ImageBitmap_source_image
 
-  # baseline: low
+  # baseline: high
   # baseline_low_date: 2022-05-31
+  # baseline_high_date: 2024-11-30
   # support:
   #   chrome: "77"
   #   chrome_android: "77"
