--- a/features/interpolate-size.yml.dist
+++ b/features/interpolate-size.yml.dist
@@ -6,6 +6,7 @@ status:
   support:
     chrome: "129"
     chrome_android: "129"
+    edge: "129"
 compat_features:
   - css.properties.interpolate-size
   - css.properties.interpolate-size.allow-keywords
