--- a/features/text-wrap-style.yml.dist
+++ b/features/text-wrap-style.yml.dist
@@ -5,6 +5,7 @@ status:
   baseline: false
   support:
     chrome: "130"
+    edge: "130"
 compat_features:
   # baseline: low
   # baseline_low_date: 2024-10-17
@@ -25,4 +26,5 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: "130"
+  #   edge: "130"
   - css.properties.text-wrap-style.pretty
