change install method for refresh_downstream publish step

--- a/.github/workflows/refresh_downstream.yml
+++ b/.github/workflows/refresh_downstream.yml
@@ -36,7 +36,7 @@ jobs:
       
       - name: Publish to NPM if changed
         run: |
-          npm ci
+          npm i
           npm prepare
           if [[ -n "$(git diff)" ]]; then
             npm publish
