Fixes incorrect key

--- a/features/overflow-overlay.yml
+++ b/features/overflow-overlay.yml
@@ -8,4 +8,4 @@ discouraged:
   alternatives:
     - overflow-shorthand
 compat_features:
-  - css.properties.word-break.break-word
+  - css.types.overflow.overlay
